# onepoint-document-chat

./: .env.example  README.md  prompts.toml  pyproject.toml
data/example_extracts/: Onepoint - Client story - Reaching for the skies (1)_2.txt  Onepoint - Client story - Reaching for the skies (1)_2_enhanced.txt
onepoint_document_chat/: config.py  log_init.py  server.py  toml_support.py
onepoint_document_chat/server/: http_server.py  session.py  websocket_server.py
onepoint_document_chat/service/: embedding_generation.py  qa_service.py  vector_search.py  vector_search_common.py
